--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
     Planeación</h1>
      <h3>Carlos Román, Ingenieria de sistemas,28-03-2022</h3>
     <p>correo: crromanr@unadvirtual.edu.co<br><br></p>
+    <h2>Fases del Proyecto</h2>
+    <a href="fase2/design.html"></a>
+    <a href="fase3/index.html"></a>
+    <a href="fase4/index.html"></a>
