--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Proyecto de sitio web 2022 periodo Fase 1
     Planeación</h1>
-     <h3>Carlos Román, Ingenieria de sistemas,28-03-2022</h3>
+     <h3>Carlos Román, Ingeniería de Sistemas,24-06-2022</h3>
     <p>correo: crromanr@unadvirtual.edu.co<br><br></p>
     <h2>Fases del Proyecto</h2>
     <a href="fase2/design.html"></a>
