--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<h1>Proyecto de sitio web 2022 periodo Fase 1
-    Planeación</h1>
-     <h3>Carlos Román, Ingeniería de Sistemas,24-06-2022</h3>
-    <p>correo: crromanr@unadvirtual.edu.co<br><br></p>
-    <h2>Fases del Proyecto</h2>
-    <a href="fase2/design.html"></a>
-    <a href="fase3/index.html"></a>
-    <a href="fase4/index.html"></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Proyecto de sitio web 2022 periodo Fase 1 Planeación</h1>
+        <h3>Carlos Román, Ingeniería de Sistemas,24-06-2022</h3>
+        <p>correo: crromanr@unadvirtual.edu.co<br><br></p>
+        <h2>Fases del Proyecto</h2>
+        <a href="fase2/design.html">Fase 2</a>
+        <a href="fase3/index.html">Fase 3</a>
+        <a href="fase4/index.html">Fase 4</a>
+    
+</body>
+</html>
